# rag-system-pgvector

./: .env.example  .gitignore  README.md  pyproject.toml
pgvector-setup/docker/: docker-compose.yml  init.sql
rag-pipeline/: build_vectordb.py  examples.py  rag_chat.py
rag-pipeline/rag/: __init__.py  config.py  document_processor.py  embedding_service.py  rag_system.py  vector_store.py
